sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_id_empty/errors.duarouter
Error: Attribute 'id' in definition of a vehicle is empty.
Quitting (on error).
